<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_1">Box One</string>
    <string name="box_2">Box Two</string>
    <string name="box_3">Box Three</string>
    <string name="box_4">Box Four</string>
    <string name="box_5">Box Five</string>
    <string name="how_to_play">How to play</string>
    <string name="tap_the_boxes_and_buttons">Tap the Screen and Buttons</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="button_green">Green</string>
</resources>